feat: add spacing tokens

--- a/packages/design-tokens/design-token-previews/colors.mdx
+++ b/packages/design-tokens/design-token-previews/colors.mdx
@@ -1,5 +1,5 @@
 import { ColorPalette, ColorItem } from "@storybook/blocks";
-import * as colorTokens from "../src/tokens/color.tokens.json";
+import ColorTokensTable from "../../../.storybook/blocks/ColorTokensTable";
 
 # Color Tokens
 
@@ -7,16 +7,4 @@ import * as colorTokens from "../src/tokens/color.tokens.json";
 
 <br />
 
-<ColorPalette>
-  {Object.entries(colorTokens.color)
-    .sort()
-    .map((token, i) => {
-      return (
-        <ColorItem
-          key={i}
-          title={`${token[0]} color`}
-          colors={{ [`${token[0]}`]: token[1].value }}
-        />
-      );
-    })}
-</ColorPalette>
+<ColorTokensTable />
