--- a/packages/design-tokens/design-token-previews/typography.mdx
+++ b/packages/design-tokens/design-token-previews/typography.mdx
@@ -1,15 +1,15 @@
 import { Typeset } from "@storybook/blocks";
-import * as fontSizeTokens from "../src/tokens/font-size.tokens.json";
-import * as fontFamilyTokens from "../src/tokens/font-family.tokens.json";
-import * as fontWeightTokens from "../src/tokens/font-weight.tokens.json";
+import fontSizeTokens from "../src/tokens/font-size.tokens.json";
+import fontFamilyTokens from "../src/tokens/font-family.tokens.json";
+import fontWeightTokens from "../src/tokens/font-weight.tokens.json";
 
 # Typography
+
+---
 
 <br />
 
 ### The font is set with Moderat Inter, sans-serif
-
----
 
 <br />
 
