fix: move design token preview components and tests

--- a/packages/design-tokens/design-token-previews/borders.mdx
+++ b/packages/design-tokens/design-token-previews/borders.mdx
@@ -1,6 +1,6 @@
-import { BorderStyleTokensTable } from "./tables/BorderStyleTokensTable";
-import { BorderWidthTokensTable } from "./tables/BorderWidthTokensTable";
-import { BorderRadiiTokensTable } from "./tables/BorderRadiiTokensTable";
+import { BorderStyleTokensTable } from "../../components/src/design-token-preview-tables/BorderStyleTokensTable";
+import { BorderWidthTokensTable } from "../../components/src/design-token-preview-tables/BorderWidthTokensTable";
+import { BorderRadiiTokensTable } from "../../components/src/design-token-preview-tables/BorderRadiiTokensTable";
 
 # Border Tokens
 
