--- a/packages/design-tokens/design-token-previews/colors.mdx
+++ b/packages/design-tokens/design-token-previews/colors.mdx
@@ -1,4 +1,4 @@
-import { ColorTokensTable } from "./tables/ColorTokensTable";
+import { ColorTokensTable } from "../../components/src/design-token-preview-tables/ColorTokensTable";
 
 # Color Tokens
 
