--- a/packages/design-tokens/design-token-previews/font-weights.mdx
+++ b/packages/design-tokens/design-token-previews/font-weights.mdx
@@ -1,4 +1,4 @@
-import { FontWeightTokensTable } from "./tables/FontWeightTokensTable";
+import { FontWeightTokensTable } from "../../components/src/design-token-preview-tables/FontWeightTokensTable";
 
 # Font Weight Tokens
 
