--- a/packages/design-tokens/design-token-previews/spacing.mdx
+++ b/packages/design-tokens/design-token-previews/spacing.mdx
@@ -1,4 +1,4 @@
-import { SpacingTokensTable } from "./tables/SpacingTokensTable";
+import { SpacingTokensTable } from "../../components/src/design-token-preview-tables/SpacingTokensTable";
 
 # Spacing Tokens
 
