--- a/packages/design-tokens/design-token-previews/icon-sizes.mdx
+++ b/packages/design-tokens/design-token-previews/icon-sizes.mdx
@@ -1,4 +1,4 @@
-import { IconSizeTokensTable } from "./tables/IconSizeTokensTable";
+import { IconSizeTokensTable } from "../../components/src/design-token-preview-tables/IconSizeTokensTable";
 
 # Icon Size Tokens
 
