fix(design-tokens): refactor token previews

--- a/packages/design-tokens/design-token-previews/colors.mdx
+++ b/packages/design-tokens/design-token-previews/colors.mdx
@@ -1,5 +1,5 @@
 import * as colorTokens from "../src/tokens/color.tokens.json";
-import { TokensTable } from "./TokensTable";
+import { TokensTable } from "./components/TokensTable";
 
 # Color Tokens
 
