--- a/packages/design-tokens/design-token-previews/font-sizes.mdx
+++ b/packages/design-tokens/design-token-previews/font-sizes.mdx
@@ -1,4 +1,4 @@
-import { TokensTable } from "./TokensTable";
+import { TokensTable } from "./components/TokensTable";
 import * as fontSizeTokens from "../src/tokens/font-size.tokens.json";
 
 # Font Size Tokens
