--- a/packages/design-tokens/design-token-previews/icon-sizes.mdx
+++ b/packages/design-tokens/design-token-previews/icon-sizes.mdx
@@ -1,4 +1,4 @@
-import { TokensTable } from "./TokensTable";
+import { TokensTable } from "./components/TokensTable";
 import * as iconSizeTokens from "../src/tokens/size.tokens.json";
 
 # Icon Size Tokens
