--- a/packages/design-tokens/design-token-previews/spacing.mdx
+++ b/packages/design-tokens/design-token-previews/spacing.mdx
@@ -1,4 +1,4 @@
-import { TokensTable } from "./TokensTable";
+import { TokensTable } from "./components/TokensTable";
 import * as spaceTokens from "../src/tokens/space.tokens.json";
 
 # Spacing Tokens
