--- a/packages/design-tokens/design-token-previews/borders.mdx
+++ b/packages/design-tokens/design-token-previews/borders.mdx
@@ -1,7 +1,7 @@
 import borderStyleTokens from "../src/tokens/border-style.tokens.json";
 import borderWidthTokens from "../src/tokens/border-width.tokens.json";
 import borderRadiiTokens from "../src/tokens/border-radius.tokens.json";
-import { TokensTable } from "./TokensTable";
+import { TokensTable } from "./components/TokensTable";
 
 # Border Tokens
 
