fix: fix last failing types

--- a/packages/design-tokens/docs/borders.mdx
+++ b/packages/design-tokens/docs/borders.mdx
@@ -11,12 +11,12 @@ import { TokensTable } from "./components/TokensTable";
 
 ## Border Styles
 
-<TokensTable type="border-style" data={borderStyleTokens} />
+<TokensTable data={borderStyleTokens} />
 
 ## Border Widths
 
-<TokensTable type="border-width" data={borderWidthTokens} />
+<TokensTable data={borderWidthTokens} />
 
 ## Border Radii
 
-<TokensTable type="border-radius" data={borderRadiiTokens} />
+<TokensTable data={borderRadiiTokens} />
