--- a/packages/design-tokens/docs/font-sizes.mdx
+++ b/packages/design-tokens/docs/font-sizes.mdx
@@ -7,4 +7,4 @@ import * as fontSizeTokens from "../src/tokens/font-size.tokens.json";
 
 <br />
 
-<TokensTable type="font-size" data={fontSizeTokens} />
+<TokensTable data={fontSizeTokens} />
