--- a/packages/design-tokens/docs/spacing.mdx
+++ b/packages/design-tokens/docs/spacing.mdx
@@ -7,4 +7,4 @@ import * as spaceTokens from "../src/tokens/space.tokens.json";
 
 <br />
 
-<TokensTable type="space" data={spaceTokens} />
+<TokensTable data={spaceTokens} />
