--- a/packages/design-tokens/docs/font-weights.mdx
+++ b/packages/design-tokens/docs/font-weights.mdx
@@ -7,4 +7,4 @@ import * as fontWeightTokens from "../src/tokens/font-weight.tokens.json";
 
 <br />
 
-<TokensTable type="font-weight" data={fontWeightTokens} />
+<TokensTable data={fontWeightTokens} />
