--- a/packages/design-tokens/docs/icon-sizes.mdx
+++ b/packages/design-tokens/docs/icon-sizes.mdx
@@ -7,4 +7,4 @@ import * as iconSizeTokens from "../src/tokens/size.tokens.json";
 
 <br />
 
-<TokensTable type="size" data={iconSizeTokens} />
+<TokensTable data={iconSizeTokens} />
