fix same name tokens collision once they are added to TOKEN_COLUMNS

--- a/packages/design-tokens/docs/borders.mdx
+++ b/packages/design-tokens/docs/borders.mdx
@@ -11,12 +11,12 @@ import { TokensTable } from "./components/TokensTable";
 
 ## Border Styles
 
-<TokensTable data={borderStyleTokens} />
+<TokensTable data={borderStyleTokens} name="borderStyle" />
 
 ## Border Widths
 
-<TokensTable data={borderWidthTokens} />
+<TokensTable data={borderWidthTokens} name="borderWidth" />
 
 ## Border Radii
 
-<TokensTable data={borderRadiiTokens} />
+<TokensTable data={borderRadiiTokens} name="borderRadius" />
