--- a/packages/design-tokens/docs/colors.mdx
+++ b/packages/design-tokens/docs/colors.mdx
@@ -7,4 +7,4 @@ import { TokensTable } from "./components/TokensTable";
 
 <br />
 
-<TokensTable data={colorTokens} />
+<TokensTable data={colorTokens} name="color" />
