fix(docs): add right prop category to table

--- a/packages/design-tokens/docs/borders.mdx
+++ b/packages/design-tokens/docs/borders.mdx
@@ -11,12 +11,12 @@ import { TokensTable } from "./components/TokensTable";
 
 ## Border Styles
 
-<TokensTable data={borderStyleTokens} name="borderStyle" />
+<TokensTable data={borderStyleTokens} category="borderStyle" />
 
 ## Border Widths
 
-<TokensTable data={borderWidthTokens} name="borderWidth" />
+<TokensTable data={borderWidthTokens} category="borderWidth" />
 
 ## Border Radii
 
-<TokensTable data={borderRadiiTokens} name="borderRadius" />
+<TokensTable data={borderRadiiTokens} category="borderRadius" />
