--- a/packages/design-tokens/docs/font-sizes.mdx
+++ b/packages/design-tokens/docs/font-sizes.mdx
@@ -7,4 +7,4 @@ import * as fontSizeTokens from "../src/tokens/font-size.tokens.json";
 
 <br />
 
-<TokensTable data={fontSizeTokens} name="fontSize" />
+<TokensTable data={fontSizeTokens} category="fontSize" />
